# MovieTicketBookingSystem

./: CMakeLists.txt  README.md
Include/: CommonConfig.hpp  MovieTicketBookingSystem.hpp
Include/Enums/: SeatStatus.hpp
Include/Exceptions/: XArgumentNull.hpp  XBaseException.hpp  XInvalidArgument.hpp
Include/Interfaces/: IBookingManager.hpp  IProgram.hpp  ITheaterController.hpp
Include/Interfaces/Entities/: IMovie.hpp  ISeat.hpp  ISeatMutable.hpp  ITheater.hpp
Include/Interfaces/Factories/: IGenericObjectFactoryT.hpp  IMovieFactory.hpp  IObjectFactories.hpp  ISeatFactory.hpp  ITheaterFactory.hpp
Include/Internal/: BookingManager.hpp  ObjectFactory.hpp  TheaterController.hpp
Include/Internal/Entities/: Movie.hpp  Seat.hpp  Theater.hpp
MovieTicketBookingSystem.TestApp/: CMakeLists.txt
MovieTicketBookingSystem.TestApp/Src/: CMakeLists.txt  main.cpp
MovieTicketBookingSystem.Tests/: CMakeLists.txt
MovieTicketBookingSystem.Tests/Src/: CMakeLists.txt  CommonTestsConfig.hpp  GTestSuite.hpp
MovieTicketBookingSystem.Tests/Src/Internal/: BookingManagerTests.cpp
MovieTicketBookingSystem.Tests/Src/Internal/Entities/Mocks/: TheaterMock.hpp
Src/: CMakeLists.txt  MovieTicketBookingSystem.cpp
Src/Internal/: BookingManager.cpp  ObjectFactory.cpp  TheaterController.cpp
